2010-05-xx:
    * version 0.7.6
    * Update GFPastel 2010
    * Fix last post and pagination links

2010-05-05:
    * version 0.7.5
    * Replace SpotFAQs with a smaller CSS that complements the SpotFAQs skin
      on GameFAQs (SpotFAQs extras)
    * Link post number in quote headers to the quoted post
    * New CSS: GFPastel 2010
    * Fix highlighting group priority
    * Fix some stuff that broke when the URLs changed

2009-11-14:
    * version 0.7.4
    * Drop Firefox 2 compatibility
    * Custom date formats
    * New CSS: SpotFAQs
    * Improve the GameFAQs clock and add it to the options window
    * New CSS: 8for11
    * Different icons for the sidebar and options toolbar buttons
    * Replace the favorites drop down menu in the sidebar with a list box
    * Add "Show Category List" board setting
    * Remove inline code tags (block level code is still there)
    * Compatibility with Firefox 3.6 and SeaMonkey 2.0

2009-07-02:
    * version 0.7.3
    * Fix topic QuickPost when GameFAQs' main stylesheets are disabled
    * Fix QuickPost buttons not appearing under some circumstances
    * Change how descriptions in the Style pane of the options window are presented
      (now shown in a dialog box when enabling or from right click -> About)
    * Fix a problem with the context menu and sidebar in Firefox 2

2009-06-21:
    * version 0.7.2
    * Add clock to top of page - can be enabled by setting
      the "gamefox.elements.clock" pref to true
    * Undisable "Post Message" button after successfully making a post
    * Enable middle-clicking for tracked topics list in the context menu
    * Fix a security issue
    * Compatibility with Firefox 3.5
    * Fix a few third-party cookie issues for Firefox 3.5
    * New CSS: Remove signatures

2009-05-17:
    * version 0.7.1
    * Fix removal of old stylesheets on update
    * Fix horizontal scroll bar that was appearing for some people
    * Fix QuickWhois for your own profile