@@ -1,2 +1,4 @@
 warnBlankPost=Your message appears to only consist of a signature. Are you sure you want to post it?
 neverWarnBlankPost=Never warn before making a blank post
+
+tagError=An error occurred while tagging the topic.
