@@ -2,6 +2,7 @@
     * version 0.7.6
     * Update GFPastel 2010
     * Fix last post and pagination links
+    * Fix tagging and tracking features
 
 2010-05-05:
     * version 0.7.5
